--- a/v6/rs/Cargo.toml
+++ b/v6/rs/Cargo.toml
@@ -2,8 +2,11 @@
 name = "rs"
 version = "0.1.0"
 authors = ["Lucian Sirbu <quamis@gmail.com>"]
+edition = "2018"
 
 [dependencies]
-time = "0.1.12"
-crc = "^1.0.0"
-md-5 = "0.8.0"
+time = "^0.1.12"
+crc32fast = "^1.2.0"
+md-5 = "^0.8.0"
+itertools = "^0.8.2"
+xxhash-rust = "0.8.2"
