--- a/decompressorHash/Cargo.toml
+++ b/decompressorHash/Cargo.toml
@@ -10,3 +10,5 @@ clap = { version = "3.0.14", features = ["derive"] }
 itertools = "0.10.2"
 data-encoding = "2.3.2"
 md5 = "0.7.0"
+rayon = "1.5.1"
+rand = "0.8.5"
