--- a/decompressorHash/Cargo.toml
+++ b/decompressorHash/Cargo.toml
@@ -3,6 +3,10 @@ name = "decompressor_hash"
 version = "0.1.0"
 edition = "2018"
 
+[target.x86_64-unknown-linux-gnu]
+linker = "/usr/bin/clang"
+rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
